--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-widget-datetimepicker": "*",
-        "kartik-v/yii2-widget-timepicker": "^1.0",
-        "kartik-v/yii2-mpdf": "dev-master",
-        "symfony/google-mailer": "^6.0"
+        "kartik-v/yii2-widget-timepicker": "^1.0",        
+        "symfony/google-mailer": "^6.0",
+        "yii2tech/html2pdf": "^1.0",
+        "mpdf/mpdf": "8.0.17"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
